--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 server.port=8081
 HTTP_REQUEST_TIMEOUT=5000
 HTTP_USERS_TEMPLATE=https://api.agify.io/?name=%s
-#HTTP_USERS_GEO_TEMPLATE=https://api.2ip.me/geo.json?ip=%s
-HTTP_USERS_GEO_TEMPLATE=https://2ip.ru/info/%s
+HTTP_USERS_GEO_TEMPLATE=https://api.2ip.me/geo.json?ip=%s
